--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="wrapper">
-        <img src="../images/Background.png" alt="image1" class="img1">
-        <img src="../images/profile.png" alt="image2" class="img2">
+        <img src="./images/Background.png" alt="image1" class="img1">
+        <img src="./images/profile.png" alt="image2" class="img2">
         <h1 class="heading"> Bio-Data </h1>
         <h4 class="foot"> © 2022 Prafful Gupta </h4>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook fb"
